fdo#82106 RTF import: fix missing tab after special footnote

Change-Id: I5ea45dbed652231acdcc3632ced728ed8bcb621a